--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-numpy
+numpy=1.21.5
 pickle
-tensorflow
+tensorflow=2.11.0
 os
-schedule
+schedule=1.1.0
 time
 subprocess
-django
+django=4.1.6
 csv
